Lagt til bilde av UI og oppdatert README.md